hphp/hack/test/typecheck/num_type_hint_bad.php.exp
File "num_type_hint_bad.php", line 21, characters 5-6:
Invalid argument (Typing[4110])
File "num_type_hint_bad.php", line 15, characters 12-14:
Expected num
File "num_type_hint_bad.php", line 20, characters 12-12:
But got C
